# pytoolbox

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeListsV01.txt  README.md  _CMakeLists.txt  requirements.txt  setup.py
apps/: demo.ipynb  interpolation.ipynb  large_dataset.csv  pydataframe.py  satistics.ipynb
bindings/: DataFrameBindings.cpp  InterpolationBindings.cpp
include/: DataFrame.hpp
mytoolbox/: PyDataFrame.py  __init__.py  interpolation.py  testing_interpolation.py
mytoolbox.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python_code/: interpolation.py  pydataframe.py
pytoolbox/: __init__.py  dataframe.py  interpolation.py
pytoolbox/pytoolbox.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: DataFrame.cpp
tests/: CMakeLists.txt  test_dataframe.cpp  test_interpolation.cpp
